crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_dalaran.archetypes.SeriesPoints.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
colors: [3161148927]
markers: [1]
names: [<name>]
visible_series: [true]
marker_sizes: [3.0]
